--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,14 @@ Source: input-method-switcher
 Section: unknown
 Priority: optional
 Maintainer: William Hua <william.hua@canonical.com>
-Build-Depends: debhelper (>= 9), cmake
+Build-Depends: debhelper (>= 9),
+               cmake,
+               pkg-config,
+               qtbase5-dev,
+               qtbase5-private-dev,
+               libglib2.0-dev,
 Standards-Version: 3.9.5
-Homepage: <insert the upstream URL, if relevant>
+Homepage: https://github.com/attente/input-method-switcher
 #Vcs-Git: git://anonscm.debian.org/collab-maint/input-method-switcher.git
 #Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/input-method-switcher.git;a=summary
 
