--- a/data/20_proxy.rc.in
+++ b/data/20_proxy.rc.in
@@ -1,7 +1,7 @@
 case "$IM_CONFIG_PHASE" in
   1)
+    unset GTK_IM_MODULE
     QT_IM_MODULE=proxy
-    GTK_IM_MODULE=proxy
     ;;
   2)
     input-method-switcher &
